overflow fix, project styling

--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,13 @@
   text-align: center;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   padding: 0;
   margin: 0;
+  overflow-x: hidden;
 }
 
